--- a/contact.css
+++ b/contact.css
@@ -7,7 +7,7 @@ html, body {
 /*---HEADER---*/
 
 header {
-	background-image: url(../img/contact.jpg);
+	background-image: url(img/contact.jpg);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-position: center;
