--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ li a {
 }
 
 header {
-	background-image: url(../img/wall5.jpg);
+	background-image: url(img/wall5.jpg);
 	height: 100vh;
 	background-size: cover;
 	background-attachment: fixed;
@@ -158,7 +158,7 @@ li a:hover {
 
 .promise {
 	width: 100%;
-	background-image: url('../img/concrete.jpg');
+	background-image: url(img/concrete.jpg);
 	background-position: center;
 	background-attachment: fixed;
 	background-size: cover;
