added submit type to footer button

--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ li a:hover {
 
 .footer button {
 	float: right;
-	margin-top: -17px;
+	margin-bottom: -47px;
 	border: none;
 	font-family: 'Rajdhani';
 	font-size: 1.2rem;
@@ -444,18 +444,6 @@ button:hover {
 	.copyright {
 		font-size: 2.5rem;
 	}
-}
-
-/*---LAPTOP-LARGE---*/
-
-@media screen and (min-width: 1440px) {
-
-	/*---FOOTER---*/
-
-	.footer button {
-		margin-left: 16.5%;
-	}
-
 }
 
 /*---LAPTOP---*/
