changed footer textarea

--- a/about.css
+++ b/about.css
@@ -344,9 +344,14 @@ nav li a:hover {
 	width: 99.5%;
 }
 
+.social #form {
+	position: relative;
+}
+
 .footer button {
-	float: right;
-	margin-top: -17px;
+	position: absolute;
+	right: 0;
+	top: -50px;
 	border: none;
 	font-family: 'Rajdhani';
 	font-size: 1.2rem;
@@ -753,7 +758,7 @@ button:hover {
 	}
 
 	.footer button {
-		margin-top: -14px;
+		top: -44px;
 		font-size: 1rem;
 	}
 }
@@ -920,6 +925,12 @@ button:hover {
 	  left: 0;
 	}
 
+	.social form {
+		margin: 0;
+		display: flex;
+		justify-content: center;
+	}
+
 	.social .inner {
 		position: relative;
 		top: -10px;
@@ -942,8 +953,9 @@ button:hover {
 	}
 
 	.footer button {
-		margin-top: -5px;
-		margin-right: 3px;
+		top: -38px;
+		right: 1%;
+		font-size: 1.2rem;
 	}
 
 	.social i {
@@ -958,7 +970,6 @@ button:hover {
 
 	.footer-textarea {
 		width: 98%;
-		margin-left: 5px;
 	}
 
 	.footer .contact p {
