--- a/style.css
+++ b/style.css
@@ -300,9 +300,14 @@ li a:hover {
 	width: 99.5%;
 }
 
+.social #form {
+	position: relative;
+}
+
 .footer button {
-	float: right;
-	margin-bottom: -47px;
+	position: absolute;
+	right: 0;
+	top: -50px;
 	border: none;
 	font-family: 'Rajdhani';
 	font-size: 1.2rem;
@@ -595,7 +600,7 @@ button:hover {
 	}
 
 	.footer button {
-		margin-top: -14px;
+		top: -44px;
 		font-size: 1rem;
 	}
 }
@@ -759,6 +764,12 @@ button:hover {
 	  left: 0;
 	}
 
+	.social form {
+		margin: 0;
+		display: flex;
+		justify-content: center;
+	}
+
 	.social .inner {
 		position: relative;
 		top: -10px;
@@ -781,8 +792,9 @@ button:hover {
 	}
 
 	.footer button {
-		margin-top: -5px;
-		margin-right: 3px;
+		top: -38px;
+		right: 1%;
+		font-size: 1.2rem;
 	}
 
 	.social i {
@@ -797,13 +809,24 @@ button:hover {
 
 	.footer-textarea {
 		width: 98%;
-		margin-left: 5px;
 	}
 
-}
+	.footer .contact p {
+		margin: 5px;
+		font-size: 1rem;
+	}
 
-@media screen and (max-width: 507px) {
-	
+	.copyright {
+		background-color: red;
+	}
+
+	.copyright span {
+		color: white;
+		background-color: red;
+		padding: 5px;
+		display: inline-block;
+	}
+
 }
 
 /*---MOBILE---*/
