--- a/about.css
+++ b/about.css
@@ -82,12 +82,12 @@ nav li a:hover {
 	background-color: rgba(102,102,102,0.25);
 }
 
-.logo {
-	color: red;
-	font-size: 3.7rem;
-	margin: 10px;
-	opacity: 1;
-	margin-left: 30px;
+.logo {	
+	width: 225px;
+	height: 74px;
+	margin-bottom: 5px;
+	margin-top: 2px;
+	margin-left: 5px;
 }
 
 /*---ABOUT---*/
@@ -699,6 +699,17 @@ button:hover {
 
 /*------LANDSCAPE-MODE-MOBILE------*/
 
+@media screen and (max-width: 720px) {
+
+	nav li {
+		font-size: 1.27rem;
+	}
+
+	.logo {
+		font-size: 3.4rem;
+	}
+}
+
 @media screen and (max-width: 715px) {
 
 	/*---MAIN---*/
@@ -763,17 +774,6 @@ button:hover {
 	}
 }
 
-@media screen and (max-width: 627px) {
-
-	nav li {
-		font-size: 1.27rem;
-	}
-
-	.logo {
-		font-size: 3.4rem;
-	}
-}
-
 @media screen and (max-width: 586px) {
 
 	/*---MAIN---*/
@@ -791,6 +791,13 @@ button:hover {
 		margin-left: 50px;
 	}
 
+}
+
+@media screen and (max-width: 575px) {
+	.logo {
+		margin-left: 15px;
+		font-size: 3.15rem;
+	}
 }
 
 @media screen and (max-width: 557px) {
